# macts

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  STATUS.md  backup.sh  docker-compose.live.yml  docker-compose.paper.yml  docker-compose.testnet.yml  docker-compose.yml  pyproject.toml
.claude/skills/continuous-improvement-loop/: SKILL.md
.claude/skills/llm-trading-prompt-eng/: SKILL.md
.claude/skills/macts-agent-scaffold/: SKILL.md
.claude/skills/nvidia-nim-client/: SKILL.md
.claude/skills/rate-limit-guardian/: SKILL.md
backtest_results/: 2026-05-19_grid_bot_journey.md
config/: config.example.yaml  llm_config.yaml
config/prompts/: trading_analysis_v1.yaml  trading_analysis_v2.yaml
docker/: Dockerfile.agent  Dockerfile.mlflow
docs/: AGENT_SPECS.md  AI_ANALYST_MODEL_SELECTION.md  AI_RISK_CONTEXT_DESIGN.md  ARCHITECTURE.md  CONTRIBUTING.md  RISK_POLICY.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SETUP.md
helm/macts/: Chart.yaml  values.yaml
helm/macts/templates/: agent-deployments.yaml
monitoring/grafana/dashboards/: ai_analyst_performance.json  market_data.json  system_overview.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: influxdb.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: macts_alerts.yml
notebooks/: backtest_report_template.ipynb
probe_results/: probe_20260705T181614Z.json  probe_20260705T182950Z.json  probe_20260706T045821Z.json
scripts/: backtest.py  grid_bot_backtest.py  grid_bot_backtest_tuned.py  grid_bot_v3_liquidate.py  grid_bot_v4_loose_filter.py  grid_bot_with_ml_filter.py  init_db.sql  nim_model_probe.py  promote_to_next_stage.sh  test_data_fetch.py  walk_forward_backtest.py  walk_forward_v15.py
src/: __init__.py  cli.py
src/agents/ai_analyst/: __init__.py  agent.py  outcome.py  scheduler.py
src/agents/backtesting/: agent.py
src/agents/base/: __init__.py  base_agent.py
src/agents/circuit_breaker/: agent.py
src/agents/data_collection/: ag  agent.py
src/agents/execution/: agent.py
src/agents/feature_engineering/: agent.py
src/agents/grid_bot/: __init__.py  agent.py
src/agents/market_scanner/: agent.py
src/agents/model_registry/: agent.py
src/agents/monitoring/: agent.py
src/agents/per_coin_learning/: agent.py
src/agents/portfolio_manager/: agent.py
src/agents/risk_management/: agent.py
src/agents/signal_generation/: agent.py
src/agents/simulation/: agent.py
src/core/config/: __init__.py  loader.py
src/core/database/: __init__.py  influx_writer.py  postgres_repo.py  redis_cache.py
src/core/exchange/: __init__.py  binance_client.py
src/core/llm/: __init__.py  config.py  fallback_chain.py  nvidia_client.py  prompts.py  rate_limiter.py  tracking.py  utils.py
src/core/logging/: __init__.py  logger.py
src/core/messaging/: __init__.py  base.py  kafka_bus.py  redis_streams.py
src/core/ml/: __init__.py  indicators.py  ppo_trader.py  tft_model.py
src/core/utils/: __init__.py  helpers.py
src/models/: __init__.py  schemas.py
tests/: conftest.py
tests/unit/: test_ai_analyst.py  test_ai_analyst_outcome.py  test_config.py  test_indicators.py  test_llm_core.py  test_schemas.py  test_utils.py
