[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macts"
version = "0.1.0-alpha"
description = "Personal Multi-Agent Crypto Trading System (MACTS)"
authors = [{name = "MACTS Developer"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Async runtime
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",
    "asyncpg>=0.29.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",

    # Exchange
    "python-binance>=1.0.19",
    "ccxt>=4.2.0",
    "websockets>=12.0",

    # ML / Data
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "pytorch-forecasting>=1.0.0",
    "pytorch-lightning>=2.1.0",
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
    "optuna>=3.4.0",
    "mlflow>=2.9.0",
    "boto3>=1.34.0",
    "ta-lib>=0.4.28",
    "numba>=0.58.0",

    # Data stores
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "influxdb-client>=1.38.0",
    "psycopg[binary,pool]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # Messaging
    "aiokafka>=0.10.0",

    # Config & validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",

    # Logging & observability
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",

    # Notifications
    "python-telegram-bot>=20.7",
    "aiosmtplib>=3.0.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.92.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "ipython>=8.18.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]

[project.scripts]
macts = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "S101",  # use of assert (allowed in tests)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow",
    "integration: integration tests requiring external services",
    "unit: pure unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
